--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "hl26-hashbrowns"
+name = "python"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
