Add API connector

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,7 +1,22 @@
 [project]
-name = "python"
+name = "hashbrowns"
 version = "0.1.0"
-description = "Add your description here"
+description = "Hashbrowns planning data analysis package"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "httpx==0.28.*",
+    "pydantic>=2.10",
+    "pydantic-settings>=2",
+    "pyproj==3.7.*",
+    "python-dotenv==1.0.*",
+    "tenacity>=9",
+]
+
+[dependency-groups]
+dev = [
+    "pytest==8.3.*",
+    "pytest-asyncio==0.25.*",
+    "pytest-cov==6.*",
+    "respx==0.22.*",
+]
