--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic-settings>=2",
     "pyproj==3.7.*",
     "python-dotenv==1.0.*",
+    "scikit-learn==1.8.0",
     "tenacity>=9",
 ]
 
