--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "httpx==0.28.*",
+    "odfpy>=1.4.1",
     "pandas>=3.0.1",
     "pydantic>=2.10",
     "pydantic-settings>=2",
