--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "httpx==0.28.*",
+    "pandas>=3.0.1",
     "pydantic>=2.10",
     "pydantic-settings>=2",
     "pyproj==3.7.*",
     "python-dotenv==1.0.*",
     "scikit-learn==1.8.0",
     "tenacity>=9",
+    "torch>=2.10.0",
 ]
 
 [dependency-groups]
