--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "scikit-learn==1.8.0",
     "tenacity>=9",
     "torch>=2.10.0",
+    "reportlab>=4.0",
 ]
 
 [dependency-groups]
