--- a/planning-oracle/pyproject.toml
+++ b/planning-oracle/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "uvicorn>=0.29,<1",
     "scikit-learn>=1.4,<2",
     "matplotlib>=3.8,<4",
+    "tenacity>=9",
 ]
 
 [project.optional-dependencies]
