--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "tenacity>=9",
     "torch>=2.10.0",
     "reportlab>=4.0",
+    "fastapi>=0.129.2",
+    "uvicorn>=0.41.0",
 ]
 
 [dependency-groups]
