Fix merge problems.

--- a/python/Makefile
+++ b/python/Makefile
@@ -23,7 +23,7 @@ train:
 ifndef COUNCILS
 	$(error COUNCILS is required — e.g. make train COUNCILS="1 2 3")
 endif
-	PYTHONPATH=$(shell pwd) $(PYTHON) -m training.train \
+	PYTHONPATH=$(shell pwd) $(PYTHON) -m neural_network.training.train \
 		--epochs $(EPOCHS) \
 		--batch-size $(BATCH_SIZE) \
 		--lr $(LR) \
@@ -31,7 +31,7 @@ endif
 		--councils $(COUNCILS)
 
 evaluate:
-	$(PYTHON) -m training.evaluate
+	$(PYTHON) -m neural_network.training.evaluate
 
 serve:
 	$(UVICORN) main:app --host 0.0.0.0 --port $(PORT) --reload
