--- a/planning-oracle/pyproject.toml
+++ b/planning-oracle/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "scikit-learn>=1.4,<2",
     "matplotlib>=3.8,<4",
     "tenacity>=9",
+    "odfpy>=1.4.1",
 ]
 
 [project.optional-dependencies]
